--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,31 @@
     width: 32.85px;
     height: 24px;
 }
+
+
+.card {
+    border-radius: 18px;
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.3s;
+  }
+  
+  .card::before {
+    border-radius: 18px;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 11.97%, #2271E9 150%);
+    transition: height 0.3s;
+    z-index: -1;
+  }
+  
+  .card:hover::before {
+    border-radius: 18px;
+    height: 100%;
+    z-index: 1;
+  }
+  
