--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .img {
-    width: 32.85px;
-    height: 24px;
+  width: 32.85px;
+  height: 24px;
 }
 
 .onactive {
@@ -20,6 +20,7 @@
   position: relative;
   overflow: hidden;
 }
+
 .hvr-underline-from-center:before {
   content: "";
   position: absolute;
@@ -36,12 +37,15 @@
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+
+.hvr-underline-from-center:hover:before,
+.hvr-underline-from-center:focus:before,
+.hvr-underline-from-center:active:before {
   left: 0;
   right: 0;
 }
 
-.links2{
+.links2 {
   text-decoration: none;
   color: white;
 }
@@ -52,32 +56,49 @@
 
 
 .card {
-    border-radius: 18px;
-    position: relative;
-    overflow: hidden;
-    transition: background-color 0.3s;
-  }
-  
-  .card::before {
-    border-radius: 18px;
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 11.97%, #2271E9 150%);
-    transition: height 0.3s;
-    z-index: -1;
-  }
-  
-  .card:hover::before {
-    border-radius: 18px;
-    height: 100%;
-    z-index: 1;
-  }
+  border-radius: 18px;
+  position: relative;
+  overflow: hidden;
+  transition: background-color 0.3s;
+}
 
+.card::before {
+  border-radius: 18px;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 11.97%, #2271E9 150%);
+  transition: height 0.3s;
+  z-index: -1;
+}
+
+.card:hover::before {
+  border-radius: 18px;
+  height: 100%;
+  z-index: 1;
+}
+
+
+.car {
+  width: 700px;
+}
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+
+}
+
+@media only screen and (max-width: 767px) {
+  .engineer {
+    height: 270px;
+    width: 270px;
+  }
 
   .car {
-    width: 700px;
+    display: none;
   }
+}
