--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,9 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-
+  .car {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 767px) {
