--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@
   width: 700px;
 }
 
+.classic {
+  height: 50px;
+  width: 50px;
+}
+
 
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
